--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="icon" type="image/x-icon" href="src/assets/icons/favicon.svg" />
+    <title>MGA team - Internet Traffic World Leader</title>
     <script type="module" src="/src/main.js"></script>
   </head>
   <body>
